@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://opensource.org/licenses/bsd-license.php">BSD</license>
  <notes>
+* [jan] Fix access to debug handler in Timsieved driver.
 * [jan] Fix deleting single conditions from a rule (Bug #10253).
  </notes>
  <contents>
@@ -949,6 +950,7 @@
    <date>2011-06-14</date>
    <license uri="http://opensource.org/licenses/bsd-license.php">BSD</license>
    <notes>
+* [jan] Fix access to debug handler in Timsieved driver.
 * [jan] Fix deleting single conditions from a rule (Bug #10253).
    </notes>
   </release>
